# stim-rs

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml  git-cliff.toml  justfile  release-plz.toml  renovate.json  typos.toml
.githooks/: pre-commit
.github/workflows/: changelog.yml  ci.yml  release.yml
crates/stim/: Cargo.toml  README.md
crates/stim-cxx/: Cargo.toml  README.md  build.rs  prebuilt-sha256.txt
crates/stim-cxx/include/: stim_rs_bridge.h
crates/stim-cxx/src/: lib.rs
crates/stim-cxx/src/ffi/: circuit.cc  smoke.cc
crates/stim-cxx/tests/: linux_smoke.rs
crates/stim/src/: lib.rs  noise.rs
crates/stim/src/circuit/: circuit_error_location.rs  circuit_error_location_stack_frame.rs  circuit_insert_operation.rs  circuit_instruction.rs  circuit_item.rs  circuit_repeat_block.rs  circuit_targets_inside_instruction.rs  core.rs  detecting_region_filter.rs  mod.rs  support.rs
crates/stim/src/common/: complex32.rs  error.rs  io.rs  mod.rs  options.rs  parse.rs
crates/stim/src/dem/: dem_append_operation.rs  dem_instruction.rs  dem_item.rs  dem_repeat_block.rs  dem_target.rs  mod.rs
crates/stim/src/metadata/: explained_error.rs  flipped_measurement.rs  gate_data.rs  gate_target.rs  gate_target_with_coords.rs  mod.rs
crates/stim/src/simulators/: mod.rs
crates/stim/src/stabilizers/: clifford_string.rs  flow.rs  mod.rs  pauli_string.rs  pauli_string_iterator.rs  tableau.rs  tableau_iterator.rs
stim/: CHANGELOG.md  Cargo.toml  README.md
stim-cxx/: CHANGELOG.md  Cargo.toml  build.rs
stim-cxx/include/: stim_rs_bridge.h
stim/src/: noise.rs
stim/src/circuit/: circuit_error_location_stack_frame.rs  circuit_instruction.rs  circuit_repeat_block.rs  detecting_region_filter.rs  mod.rs
stim/src/common/: bit_packing.rs  bridge.rs  error.rs  io.rs  mod.rs  options.rs  slicing.rs
stim/src/dem/: dem_item.rs
stim/src/metadata/: explained_error.rs  flipped_measurement.rs
stim/src/stabilizers/: flow.rs  pauli_string.rs  tableau.rs  tableau_iterator.rs
tools/: install-git-hooks.sh  stim_api_inventory.py  stim_parity_priority.py  stim_rust_parity_audit.py  verify_phase_gates.py  verify_prd_plan.py
tools/tests/: test_stim_api_inventory.py  test_stim_parity_priority.py  test_stim_rust_parity_audit.py
