[workspace]
members = ["stim", "stim-cxx"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
authors = ["Yiming Zhang <quantuminm@gmail.com>"]
repository = "https://github.com/inmzhang/stim-rs"
license = "Apache-2.0"
publish = false

[workspace.metadata.stim]
upstream_url = "https://github.com/quantumlib/Stim.git"
pinned_commit = "e9cc7dee0a67bb4dbea2733f0170d03dcecd3cd0"
doc_path = "vendor/stim/doc/python_api_reference_vDev.md"
doc_sha256 = "7fa2899fb9658a638d35c5d70ef7339ed45647664be7e7f6314d014acb74a0a2"
